--- a/my-react-app/src/scss/Header.scss
+++ b/my-react-app/src/scss/Header.scss
@@ -2,9 +2,35 @@
     margin-bottom: 90%;
     width: 100%;
     height: 10%;
+    margin-top: 1%;
+}
+
+.left-side-header{
+    margin-right: auto;
+    align-items: center;
+    width: 10%;
+    text-align: center;
 }
 
 .logo-header-img {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
+    text-align: center;
+    align-items: center;
+}
+
+.cardTracker-logo{
+    margin: auto;
+    font-size: 16px;
+    font-weight: bold;
+    width: 100px;
+    text-align: center;
+    margin-top: -10px;
+}
+
+.cardTracker-type-logo{
+    margin: auto;
+    font-size: 12px;
+    width: 75px;
+    text-align: center;
 }
