--- a/my-react-app/src/scss/Header.scss
+++ b/my-react-app/src/scss/Header.scss
@@ -1,7 +1,8 @@
 .header-container{
-    width: 100%;
+    width: 80%;
     height: 10%;
     margin-top: 1%;
+    margin-left: 10%;
 }
 
 .left-side-header{
